--- a/index.html
+++ b/index.html
@@ -13,8 +13,14 @@
 
 <body>
   <main id="main-content" role="main">
-    <div class="page-section-lg"> <!-- Show case of component -->
+    <div class="page-section dark-bkgrd">
       <div class="page-wrap">
+        <h1>Card component</h1>
+      </div>
+    </div>
+    <div class="page-section"> <!-- Show case of component -->
+      <div class="page-wrap">
+        <h2>Centered Card</h2>
         <div class="card-info-w-btn card-center">
           <div class="card-img">
             <img src="/assets/img/card-image.png" alt="women enjoying our new mobile app">
@@ -31,6 +37,7 @@
     <div class="page-section">
       <div class="page-wrap">
         <!-- A little more fancy -->
+        <h2>Alternating Alignment Cards</h2>
         <div class="row">
           <div class="card-info-w-btn">
             <div class="card-img">
